fixes spacing in tables, updates hover

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,3 +44,7 @@ body {
 .add_piece_to_group_form, .add_piece_button {
 	display: none;
 }
+
+td{
+	height: 39px;
+}
